--- a/mycontact.html
+++ b/mycontact.html
@@ -6,6 +6,10 @@
     <title>My Contact</title>
 </head>
 <body>
-    
+    <div style="flex: auto;">
+        <a href="myitem.html">My item</a>
+        <a href="myprofile.html">My profile</a>
+        <a href="http://202.44.47.45/fitm/">FITM</a>
+    </div>
 </body>
 </html>
