--- a/myitem.html
+++ b/myitem.html
@@ -6,6 +6,10 @@
     <title>MY item</title>
 </head>
 <body>
-    
+    <div style="flex: auto;">
+        <a href="myprofile.html">My profile</a>
+        <a href="mycontact.html">My contact</a>
+        <a href="http://202.44.47.45/fitm/departments/IT">IT</a>
+    </div>
 </body>
 </html>
