--- a/myprofile.html
+++ b/myprofile.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div style="flex: auto;">
+        <a href="myitem.html">My item</a>
         <a href="mycontact.html">My contact</a>
+        <a href="https://kmutnb.ac.th">KMUTNB</a>
     </div>
 </body>
 </html>
