--- a/mycontact.html
+++ b/mycontact.html
@@ -6,10 +6,10 @@
     <title>My Contact</title>
 </head>
 <body>
-    <div style="flex: auto;">
+    <div style="flex: auto; display: flex; gap: 10px;">
         <a href="myitem.html">My item</a>
         <a href="myprofile.html">My profile</a>
-        <a href="http://202.44.47.45/fitm/">FITM</a>
+        <a href="http://202.44.47.45/fitm/" target="_blank">FITM</a>
     </div>
 </body>
 </html>
