--- a/myitem.html
+++ b/myitem.html
@@ -6,10 +6,10 @@
     <title>MY item</title>
 </head>
 <body>
-    <div style="flex: auto;">
+    <div style="flex: auto; display: flex; gap: 10px;">
         <a href="myprofile.html">My profile</a>
         <a href="mycontact.html">My contact</a>
-        <a href="http://202.44.47.45/fitm/departments/IT">IT</a>
+        <a href="http://202.44.47.45/fitm/departments/IT" target="_blank">IT</a>
     </div>
 </body>
 </html>
