--- a/myprofile.html
+++ b/myprofile.html
@@ -6,10 +6,10 @@
     <title>My Profile</title>
 </head>
 <body>
-    <div style="flex: auto;">
+    <div style="flex: auto; display: flex; gap: 10px;">
         <a href="myitem.html">My item</a>
         <a href="mycontact.html">My contact</a>
-        <a href="https://kmutnb.ac.th">KMUTNB</a>
+        <a href="https://kmutnb.ac.th" target="_blank">KMUTNB</a>
     </div>
 </body>
 </html>
