Complete HW4 Update

--- a/myprofile.html
+++ b/myprofile.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>ประวัติส่วนตัว</title>
 </head>
+
 <body>
-    <div style="flex: auto; display: flex; gap: 10px;">
-        <a href="myitem.html">My item</a>
-        <a href="mycontact.html">My contact</a>
-        <a href="https://kmutnb.ac.th" target="_blank">KMUTNB</a>
+    <h1>ประวัติส่วนตัว</h1>
+    <div class="content">
+        ชื่อ: นายกฤษฎา บุตรศรี<br>
+        รหัสนักศึกษา: 6806022511161<br>
+        สาขา: สาขาวิชาวิศวกรรมสารสนเทศและเครือข่าย (INET)<br>
+        ชั้นปี: ปีที่ 1<br>
+        อีเมล: s68060225111@email.kmutnb.ac.th<br>
+    </div>
+    <div class="img-container">
+        <img src="images/image1.jpg" alt="Profile image 1">
+        <img src="images/image2.jpg" alt="Profile image 2">
+        <img src="images/image3.jpg" alt="Profile image 3">
     </div>
 </body>
+
 </html>
